unpackaged/main/default/objects/Mass_Approval_Config__mdt/Mass_Approval_Config__mdt.object-meta.xml
<CustomObject>
    <label>Mass Approval Config</label>
    <pluralLabel>Mass Approval Configs</pluralLabel>
</CustomObject>