unpackaged/main/default/objects/Mass_Approval_Config__mdt/fields/Approval_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Name__c</fullName>
    <inlineHelpText>Unique name of the approval process, If you leave this blank all approval processes are considered for the specified object.</inlineHelpText>
    <label>Approval Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>