unpackaged/main/default/objects/Mass_Approval_Config__mdt/fields/Display_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Display_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Chatter</label>
    <type>Checkbox</type>
</CustomField>