unpackaged/main/default/objects/Mass_Approval_Config__mdt/fields/Display_Comments__c.field-meta.xml
<CustomField>
    <fullName>Display_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Comments</label>
    <type>Checkbox</type>
</CustomField>