unpackaged/main/default/objects/Mass_Approval_Config__mdt/fields/Display_View__c.field-meta.xml
<CustomField>
    <fullName>Display_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display View</label>
    <type>Checkbox</type>
</CustomField>